--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "wallet-connector-gro",
   "version": "0.1.1",
-  "private": true,
+  "private": false,
   "dependencies": {
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^13.0.0",
@@ -19,6 +19,10 @@
     "typescript": "^4.4.2",
     "wagmi": "^0.12.10",
     "web-vitals": "^2.1.0"
+  },
+  "exports": {
+    ".": "./src/components",
+    "./connectos": "./src/connectors"
   },
   "scripts": {
     "start": "react-scripts start",
